# 2D-Heat-Equation

./: .clang-format  CMakeLists.txt  README.md  geometric_operations.hpp  main.cpp  mesh.cpp  mesh.h  properties.h
python/: plot_mesh.py
scripts/: run_and_plot.sh
scripts/python/: plot_mesh.py
scripts/shell/: run_and_plot.sh
source/c++/: geometric_operations.hpp  main.cpp  mesh.cpp  mesh.h  properties.h
